--- a/weather.html
+++ b/weather.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Weather_App</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-	<link rel="stylesheet" href="src/style.css">
-</head>
-<body>
-	<div class="container">
-	<h1>Weatherrrr</h1>
-	
-	</div>
-	<script src="src/weather.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather_App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Nairobi</h1>
+        <ul>
+          <li>Saturday 22.00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
+              alt="Clear"
+            />
+            15°C| °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 2%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 5km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a
+            href="https://github.com/Mercy-Kanyi/Weather-Application"
+            target="_blank"
+          >
+            Open-source code
+          </a>
+          by Mercy Kanyi
+        </small>
+      </div>
+    </div>
+    <script src="src/weather.js"></script>
+  </body>
 </html>
