--- a/weather.html
+++ b/weather.html
@@ -16,18 +16,23 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <h1>Nairobi</h1>
-        <ul>
-          <li>Saturday 22.00</li>
-          <li>Clear</li>
-        </ul>
+        <div class="upperside">
+          <h1>Nairobi</h1>
+          <ul>
+            <li>Saturday 22.00</li>
+            <li>Clear</li>
+          </ul>
+        </div>
         <div class="row">
           <div class="col-6">
+			  <div class="clearfix">
             <img
               src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
               alt="Clear"
+			  class="float-left"
             />
-            15°C| °F
+            <span class="float-left"> 15°C| °F</span>
+		</div>
           </div>
           <div class="col-6">
             <ul>
@@ -37,16 +42,16 @@
             </ul>
           </div>
         </div>
-        <small>
-          <a
-            href="https://github.com/Mercy-Kanyi/Weather-Application"
-            target="_blank"
-          >
-            Open-source code
-          </a>
-          by Mercy Kanyi
-        </small>
       </div>
+      <small>
+        <a
+          href="https://github.com/Mercy-Kanyi/Weather-Application"
+          target="_blank"
+        >
+          Open-source code
+        </a>
+        by Mercy Kanyi
+      </small>
     </div>
     <script src="src/weather.js"></script>
   </body>
