--- a/weather.html
+++ b/weather.html
@@ -30,8 +30,10 @@
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
                   alt="Clear"
+                  class="float-left"
                 />
-                 <strong>15</strong><span class="units">°C| <a href="#">°F</a></span>
+                 <strong>15</strong> 
+                  <span class="units">°C| <a href="#">°F</a></span>
               </div>
             </div>
             <div class="col-6">
