updated javascript date

--- a/weather.html
+++ b/weather.html
@@ -21,7 +21,7 @@
           <div class="upperside">
             <h1 id="city"></h1>
             <ul>
-              <li>Saturday 22.00</li>
+              <li id="date">Saturday 22.00</li>
               <li id="description"></li>
             </ul>
           </div>
