Updated the icon element

--- a/weather.html
+++ b/weather.html
@@ -29,9 +29,10 @@
             <div class="col-6">
               <div class="weather-temperature clearfix">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-                  alt="Clear"
+                  src=""
+                  alt=""
                   class="float-left"
+                  id="weather-icon"
                 />
                 <strong id="temperature"></strong>
                 <span class="units">°C | <a href="#">°F</a></span>
