--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
     <div class="container">
       <div class="weather-app-wrap">
         <div class="weather-app">
+          <div class="row">
+            <div class="col-9">
+              <form id="search-form"class="mb-3">
+            <input
+              type="search"
+              placeholder="Enter a city"
+              class="form-control"
+              id="city-input"
+            />
+          </div>
+            <div class="col-3">
+              <input 
+              type="submit" 
+              value="search" 
+              class="btn btn-success w-100"/>
+            </div>
+          </form></div>
           <div class="upperside">
             <h1 id="city"></h1>
             <ul>
@@ -28,12 +45,7 @@
           <div class="row">
             <div class="col-6">
               <div class="weather-temperature clearfix">
-                <img
-                  src=""
-                  alt=""
-                  class="float-left"
-                  id="weather-icon"
-                />
+                <img src="" alt="" class="float-left" id="weather-icon" />
                 <strong id="temperature"></strong>
                 <span class="units">°C | <a href="#">°F</a></span>
               </div>
