Updated the conversion units

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="weather-temperature clearfix">
                 <img src="" alt="" class="float-left" id="weather-icon" />
                 <strong id="temperature"></strong>
-                <span class="units">°C | <a href="#">°F</a></span>
+                <span class="units"> <a href="#" class="active" id="celsius-degrees">°C</a> | <a href="#" id="fahrenheit-temperature">°F</a></span>
               </div>
             </div>
             <div class="col-6">
