--- a/index.html
+++ b/index.html
@@ -59,20 +59,8 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">Fri</div> 
-                <img 
-                  src="https://openweathermap.org/img/wn/04d@2x.png" 
-                  alt="icon" 
-                  width="50px"
-                />
-                <div class="weather-forecast-temperatures">
-                  <span class="weather-forecast-max-temp">18°</span> <span class="weather-forecast-min-temp">12°</span> 
-                </div>
-              </div>
-            </div>
+          <div class="weather-forecast" id="weather-forecast">
+            
           </div>
         </div>
         <small>
