--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="weather-app-wrap">
         <div class="weather-app">
-          <form id="search-form"class="mb-3"></form>
+          <form id="search-form" class="mb-3">
             <div class="row">
               <div class="col-9">
                 <input
@@ -26,12 +26,13 @@
                   placeholder="Enter a city"
                   class="form-control"
                   id="city-input"
-                  autocomplete="off"/>
+                  autocomplete="off"
+                />
               </div>
               <div class="col-3">
-                <input 
-                  type="submit" 
-                  value="search" 
+                <input
+                  type="submit"
+                  value="search"
                   class="btn btn-success w-100"
                 />
               </div>
@@ -49,7 +50,10 @@
               <div class="weather-temperature clearfix">
                 <img src="" alt="" class="float-left" id="weather-icon" />
                 <strong id="temperature"></strong>
-                <span class="units"> <a href="#" class="active" id="celsius-degrees">°C</a> | <a href="#" id="fahrenheit-temperature">°F</a></span>
+                <span class="units">
+                  <a href="#" class="active" id="celsius-degrees">°C</a> |
+                  <a href="#" id="fahrenheit-temperature">°F</a></span
+                >
               </div>
             </div>
             <div class="col-6">
@@ -59,9 +63,7 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="weather-forecast">
-            
-          </div>
+          <div class="weather-forecast" id="weather-forecast"></div>
         </div>
         <small>
           <a
